# ngtools

./: .gitattributes  .gitignore  =  LICENSE  README.md  conda.yaml  conda.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  zensical.toml
.github/workflows/: docs.yml  publish-pyscript.yaml  publish.yaml
converter_scripts/trk_to_precomputed_annotation/: README.md  main.py  requirements.txt  utils.py
converter_scripts/trk_to_precomputed_annotation/assets/: sub-I58_sample-hemi_desc-CSD_tractography.smalltest.trk
dev/: local_server.py
docs/: api.md  in_python.md  in_shell.md  index.md  requirements.txt  tract_annotations.md
docs/API/: cmdata.md  dandifs.md  opener.md  protocols.md  scene.md  shaders.md  spaces.md  typing.md  utils.md
docs/API/local/: console.md  iostream.md  termcolors.md  tracts.md  viewer.md
docs/api/: datasources.md  index.md  layers.md  opener.md  scene.md  shader.md  spaces.md  transforms.md  units.md  utils.md
docs/api/local/: cli.md  console.md  datasources.md  fileserver.md  handlers.md  iostream.md  termcolors.md  tracts.md  viewer.md
docs/shell/: commands.md  index.md  start.md
docs/specific/: filtering_tracts.md  index.md  interactive_registration.md  tract_annotations.md
docs/start/: index.md  local_python.md  local_shell.md  offline_scenes.md
examples/notebooks/: I58.ipynb  I58_debug.ipynb  I58_ic.ipynb  I58_old.ipynb  show_tract.ipynb
examples/wip/: debug_layers.py  trk_to_annot.py
ngtools/: __init__.py  _version.py  cmdata.py  dandifs.py  datasources.py  drawroi.py  fileserver.py  formats.yml  layers.py  layertypes.yml  nglocal.py  opener.py  optionals.py  parserapp.py  protocols.py  scene.py  shaders.py  spaces.py  tracts.py  transforms.py  typing.py  units.py  url_adapter.py  utils.py  viewer.py  volume.py
ngtools-pyscript/ngtools/: _version.py  layers.py  optionals.py  protocols.py  scene.py  shaders.py  spaces.py  transforms.py  utils.py
ngtools-pyscript/ngtools_pyscript-0+unknown/: pyproject.toml
ngtools/_lta/: basis.py  conversions.py  expm.py  fsutils.py  layout.py  lie.py  lta.py  utils.py
ngtools/_nglite/: __init__.py
ngtools/_ntlite/: linear.py  nonlinear.py  surface.py
ngtools/_ntlite/io/: __init__.py  itk.py
ngtools/local/: _datasources_old.py  _viewer_old.py  _volume_old.py  cli.py  console.py  datasources.py  fileserver.py  filter.py  handlers.py  iostream.py  parserapp.py  scene.py  termcolors.py  tracts.py  viewer.py
ngtools/ntlite/: manip.py  resampling.py
ngtools/ntlite/io/: __init__.py
ngtools/tests/: test_spaces.py  test_transforms.py
ngtracts/: dandifs.py  tracts.py
ngtracts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: run_server.py  show_tract.ipynb
