[metadata]
name = ngtracts
description = Tracts visualization and annotation in neuroglancer
long_description = file:README.md
author = Yael Balbastre
author_email = ybalbastre@mgh.harvard.edu

[options]
python_requires = >= 3.8
install_requires =
    neuroglancer
    numpy
    nibabel
    tifffile
    fsspec[http]
    dandi >= 0.44  # required for `get_assets_by_glob`


[entry_points]
fsspec.specs =
    dandi = ngtracts.dandifs.RemoteDandiFileSystem
