[metadata]
name = ngtools
description = Tracts visualization and annotation in neuroglancer
long_description = file:README.md
author = Yael Balbastre
author_email = ybalbastre@mgh.harvard.edu

[options]
python_requires = >= 3.8
install_requires =
    neuroglancer
    numpy
    nitransforms
    nibabel
    tifffile
    fsspec[http]
    dandi >= 0.44  # required for `get_assets_by_glob`
    indexed_gzip

[options.entry_points]
console_scripts =
    neuroglancer = ngtools.nglocal:cli
fsspec.specs =
    dandi = ngtools.dandifs.RemoteDandiFileSystem
