[metadata]
name = ngtools
author = Yael Balbastre
author_email = ybalbastre@mgh.harvard.edu
description = Tracts visualization and annotation in neuroglancer
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Source Code=https://github.com/balbasty/ngtools
    Homepage=https://github.com/balbasty/ngtools
    Issues=https://github.com/balbasty/ngtools/issues

[options]
python_requires = >= 3.8
install_requires =
    neuroglancer
    numpy
    nitransforms
    nibabel
    tifffile
    fsspec[http]
    dask
    dandi >= 0.44  # required for `get_assets_by_glob`
    indexed_gzip

[options.entry_points]
console_scripts =
    neuroglancer = ngtools.nglocal:cli

[versioneer]
VCS = git
style = pep440
versionfile_source = ngtools/_version.py
versionfile_build = ngtools/_version.py
tag_prefix =
parentdir_prefix =
